AI-JADEDEVS4/src/objects/NE_Partner_Classes__c.object
<CustomObject>
    <description>Partner Class</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner Classes</relationshipLabel>
        <relationshipName>Partner_Classes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Class_Status__c</fullName>
        <description>Class Status</description>
        <formula>NE_Class__r.Class_Status__c</formula>
        <label>Class Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Partner Classes</relationshipLabel>
        <relationshipName>Partner_Classes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NE_Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>NE Class</description>
        <label>NE Class</label>
        <referenceTo>NE_Class__c</referenceTo>
        <relationshipLabel>Partner Classes</relationshipLabel>
        <relationshipName>Partner_Classes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Student Status</description>
        <label>Student Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Partner Class</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PCL-{0000000000}</displayFormat>
        <label>NE-Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Classes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>